Fix hover color for tables in dark mode
Fixes #14

--- a/frontend/src/styles/global/resalt.scss
+++ b/frontend/src/styles/global/resalt.scss
@@ -97,15 +97,16 @@ $bluegray-10: #0e1418;
     .table-hover > tbody > tr:hover,
     .table-hover > tbody > tr:hover > td,
     .table-hover > tbody > tr:hover > th {
-        background-color: $bluegray-5 !important;
+        background-color: $bluegray-6 !important;
         color: var(--light-gray) !important;
     }
     .table .bg-light {
-        background-color: var(--gray-6) !important;
-        color: var(--black) !important;
+        background-color: $bluegray-5 !important;
+        color: var(--light-gray) !important;
     }
     .table .bg-light:hover {
-        background-color: var(--gray-6) !important;
+        background-color: $bluegray-6 !important;
+        color: var(--light-gray) !important;
     }
 
     .table > :not(caption) > * > * {
